Hide download options for CAN IFL

--- a/css/header.css
+++ b/css/header.css
@@ -3750,6 +3750,7 @@ html {
 }
 
 ._63f9425c45404c36a23495ed7bef1314 .download-menu *:not(:last-child) {display:none !important;}
+._f9ee12765aa94ab5a2150ec7e988b66b_5 .download-menu *:not(:last-child) {display:none !important;}
 
 
 .survey-modal {
