--- a/css/header.css
+++ b/css/header.css
@@ -3749,8 +3749,19 @@ html {
     font-family: sans-serif
 }
 
-._63f9425c45404c36a23495ed7bef1314 .download-menu *:not(:last-child) {display:none !important;}
-._f9ee12765aa94ab5a2150ec7e988b66b_5 .download-menu *:not(:last-child) {display:none !important;}
+._63f9425c45404c36a23495ed7bef1314 .download-menu *:not(:last-child) {display:none !important;} /*tree cover loss*/
+._f9ee12765aa94ab5a2150ec7e988b66b_5 .download-menu *:not(:last-child) {display:none !important;} /*canada ifls*/
+._2aaf839424e44e96a09eff4dcdbf70cf_0 .download-menu *:not(:last-child) {display:none !important;} /*mining*/
+._baae47df61ed4a73a6f54f00cb4207e0_5 .download-menu *:not(:last-child) {display:none !important;} /*tree plantations*/
+._6533372b599a473db8ecc8b86ccffd5b_1 .download-menu *:not(:last-child) {display:none !important;} /*logging raods*/
+._7dc2af9bf4e2404393f673e603aa9351_4 .download-menu *:not(:last-child) {display:none !important;} /*ifls 2013*/
+._5a811508e1ab4ddbb79f7f0753d7d2d7_3 .download-menu *:not(:last-child) {display:none !important;} /*ifls 2000*/
+._b753bb462b1f4cd896642c33c4b4e145_0 .download-menu *:not(:last-child) {display:none !important;} /*canada mining*/
+._e22b22b3525c46f3b35548daf6289903_1 .download-menu *:not(:last-child) {display:none !important;} /*land rights*/
+._eca9f0db800a4d5c83bbf7f231c67949_0 .download-menu *:not(:last-child) {display:none !important;} /*wood fiber*/
+._20398d4dc36e47bd92b559786670f270_1 .download-menu *:not(:last-child) {display:none !important;} /*oil palm*/
+._8a405466bff2441794628fc5b845fadd_3 .download-menu *:not(:last-child) {display:none !important;} /*managed forests*/
+._44bbf06379f545daa149ee7b237b9e18_1 .download-menu *:not(:last-child) {display:none !important;} /*Canada forest tenures*/
 
 
 .survey-modal {
