reconfigure download options for global datasets

--- a/css/header.css
+++ b/css/header.css
@@ -3757,15 +3757,22 @@ html {
 ._7dc2af9bf4e2404393f673e603aa9351_4 .download-menu *:not(:last-child) {display:none !important;} /*ifls 2013*/
 ._5a811508e1ab4ddbb79f7f0753d7d2d7_3 .download-menu *:not(:last-child) {display:none !important;} /*ifls 2000*/
 ._b753bb462b1f4cd896642c33c4b4e145_0 .download-menu *:not(:last-child) {display:none !important;} /*canada mining*/
-._e22b22b3525c46f3b35548daf6289903_1 .download-menu *:not(:last-child) {display:none !important;} /*land rights*/
-._eca9f0db800a4d5c83bbf7f231c67949_0 .download-menu *:not(:last-child) {display:none !important;} /*wood fiber*/
-._20398d4dc36e47bd92b559786670f270_1 .download-menu *:not(:last-child) {display:none !important;} /*oil palm*/
-._8a405466bff2441794628fc5b845fadd_3 .download-menu *:not(:last-child) {display:none !important;} /*managed forests*/
 ._44bbf06379f545daa149ee7b237b9e18_1 .download-menu *:not(:last-child) {display:none !important;} /*Canada forest tenures*/
 ._76d3c6a26c9c453595fd86a1de5228df_0 .download-menu:last-child .kml {display:none !important;}  /*GLAD Alerts*/
 ._76d3c6a26c9c453595fd86a1de5228df_0 .download-menu:last-child .zip {display:none !important;}  /*GLAD Alerts*/
 ._76d3c6a26c9c453595fd86a1de5228df_0 .download-menu:last-child .csv {display:none !important;}  /*GLAD Alerts*/
-
+._e22b22b3525c46f3b35548daf6289903_1 .download-menu:last-child .kml {display:none !important;}  /*land rights*/
+._e22b22b3525c46f3b35548daf6289903_1 .download-menu:last-child .zip {display:none !important;}  /*land rights*/
+._e22b22b3525c46f3b35548daf6289903_1 .download-menu:last-child .csv {display:none !important;}  /*land rights*/
+._20398d4dc36e47bd92b559786670f270_1 .download-menu:last-child .kml {display:none !important;}  /*oil palm*/
+._20398d4dc36e47bd92b559786670f270_1 .download-menu:last-child .zip {display:none !important;}  /*oil palm*/
+._20398d4dc36e47bd92b559786670f270_1 .download-menu:last-child .csv {display:none !important;}  /*oil palm*/
+._8a405466bff2441794628fc5b845fadd_3 .download-menu:last-child .csv {display:none !important;}  /*managed forests*/
+._8a405466bff2441794628fc5b845fadd_3 .download-menu:last-child .zip {display:none !important;}  /*managed forests*/
+._8a405466bff2441794628fc5b845fadd_3 .download-menu:last-child .kml {display:none !important;}  /*managed forests*/
+._eca9f0db800a4d5c83bbf7f231c67949_0 .download-menu:last-child .kml {display:none !important;}  /*wood fiber*/
+._eca9f0db800a4d5c83bbf7f231c67949_0 .download-menu:last-child .zip {display:none !important;}  /*wood fiber*/
+._eca9f0db800a4d5c83bbf7f231c67949_0 .download-menu:last-child .csv {display:none !important;}  /*wood fiber*/
 
 .survey-modal {
     position: fixed;
